# sat-scheduler

./: .coverage  .coveragerc  .flake8  .gitignore  config.yaml  environment.yaml  pushbroom.json  pushbroom_sat3_camera.json  pyproject.toml  readme.md
.build/: test-cov.xml  test_output.xml
src/: __main__.py
src/main/python3/: aoi.py  dataloader.py  main.py  nadirtrace.py  orekithelpers.py  payload_activity.py  satellite.py  worker.py
src/satscheduler/: __init__.py  __main__.py  _tool_loader.py  aoi.py  application.py  configuration.py  dataloader.py  initialize.py  orekithelpers.py  propagator.py  runner.py  satellite.py
src/satscheduler/aoi/: __init__.py  aoi.py  czml.py  tool.py
src/satscheduler/configuration/: __init__.py  checker.py  configuration.py  core.py  dataclasses.py  units.py
src/satscheduler/models/: __init__.py  core.py  czml.py  detectors.py  satellite.py  sensor.py
src/satscheduler/preprocessor/: __init__.py  core.py  linebuilder.py  nadirtrace.py  preprocessor.py  runner.py  tool.py
src/satscheduler/satellite/: __init__.py  satellite.py
src/satscheduler/schedule/: __init__.py  payload_activity.py  pushbroom.py
src/satscheduler/scheduler/: __init__.py  core.py  linebuilder.py  nadirtrace.py  pushbroom.py  reporting.py  schedule.py  scheduler.py  score.py  solver.py  worker.py
src/satscheduler/tools/: __init__.py  aoitool.py  preprocess.py  scheduler.py
src/satscheduler/utils/: __init__.py  argparse_helpers.py  core.py  czml.py  dateutils.py  ephemerisgenerator.py  factory.py  logging.py  orekit_threading.py  orekitutils.py  transforms.py
src/tests/: test_utils.py  test_utils_czml.py
